# scripts_repo_example2

./: CONTRIBUTING.md  Dockerfile  README.md  environment.yml  pyproject.toml
docs/: runbook.md
scripts/: container.sh  setup_conda.sh
src/: api_main.py
src/api/: features.py
src/example.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/sendData/: test.py
src/utils/: utils.py
tests/: test_api.py
