[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "example"
dynamic = ["version"]
description = "example"
authors = [
    {name = "Eduardo Morales", email = "emorales@deepbro.ai"},
    {name = "Hugo Valenzuela", email = "hvalenzuela@deepbro.ai"},
    {name = "Jose Carlos Barreras", email = "jcbarreras@deepbro.ai"},
]
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "onnxruntime",
]
requires-python = ">=3.10"
readme = "README.md"

[tool.setuptools.dynamic]
version = {file = ["VERSION"]}

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[project.scripts]
mail = "sendData.test:main"
data = "sendEmail.test:main"
